@@ -99,7 +99,7 @@ arch-clang:
   image: registry.lrde.epita.fr/spot-arch
   script:
     - autoreconf -vfi
-    - ./configure --prefix ~/install_dir CC='clang -Qunused-arguments' CXX='clang++ -Qunused-arguments' --enable-devel --enable-c++17 --enable-doxygen
+    - ./configure --prefix ~/install_dir CC='clang -Qunused-arguments' CXX='clang++ -Qunused-arguments' --enable-devel --enable-c++20 --enable-doxygen
     - make
     - make distcheck
   artifacts:
@@ -117,9 +117,9 @@ arch-gcc-glibcxxdebug:
   image: registry.lrde.epita.fr/spot-arch
   script:
     - autoreconf -vfi
-    - ./configure --enable-devel --enable-c++17 --enable-glibcxx-debug
+    - ./configure --enable-devel --enable-c++20 --enable-glibcxx-debug
     - make
-    - make distcheck DISTCHECK_CONFIGURE_FLAGS='--enable-devel --enable-c++17 --enable-glibcxx-debug'
+    - make distcheck DISTCHECK_CONFIGURE_FLAGS='--enable-devel --enable-c++20 --enable-glibcxx-debug'
   artifacts:
     when: on_failure
     paths:
