@@ -2,7 +2,7 @@ Overview
 ========
 
 Spot is a model-checking toolkit comprising:
-  - a C++14 library with data-structures and algorithms for working
+  - a C++17 library with data-structures and algorithms for working
     with linear-time temporal logical formulas and ω-automata with
     any acceptance condition.
   - a set of command-line tools for easy access to those algorithms,
@@ -73,8 +73,8 @@ Installation
 Requirements
 ------------
 
-Spot requires a C++14-compliant compiler.  G++ 5.x or later, as well
-as Clang++ 3.5 or later should work.
+Spot requires a C++17-compliant compiler.  G++ 7.x or later, as well
+as Clang++ 5.0 or later should work.
 
 Spot expects a complete installation of Python (version 3.3 or later).
 Especially, Python's headers files should be installed.  If you don't
